# forward_bot

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.template.toml  docker-compose.yaml  example.config.toml  justfile  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml
examples/: multiple_chats_example.toml  one_to_many_example.toml
src/: config.rs  lib.rs  main.rs
tests/: config_test.rs
