cargo-features = ["edition2024"]

[package]
name = "forward_bot"
version = "1.0.0"
edition = "2024"
rust-version = "1.90.0"
license = "Unlicense"
repository = "https://github.com/chirizxc/forward_bot"

[dependencies]
telers = { version = "1.0.0-alpha.25", features = ["default_signal", "std", "rustls-tls"], default-features = false }
tokio = { version = "1.36", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true
