[package]
name = "forward_bot"
version = "1.0.0"
edition = "2024"
rust-version = "1.89.0"
license = "Unlicense"
repository = "https://github.com/chirizxc/forward_bot"

[dependencies]
telers = { version = "1.0.0-alpha.26", default-features = false, features = [
    "default_signal",
    "rustls-tls",
    "std",
]}
tokio = { version = "1.47", default-features = false, features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = true
