[package]
name = "forward_bot"
version = "1.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "Unlicense"
repository = "https://github.com/chirizxc/forward_bot"

[dependencies]
telers = {
    version = "=1.0.0-beta.2",
    default-features = false,
    features = [
        "std",
        "rustls-tls",
        "default_signal",
    ],
}
tokio = {
    version = "=1.51.0",
    default-features = false,
    features = ["macros"],
}
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
serde = {
    version = "=1.0.228",
    features = ["derive"]
}
thiserror = "=2.0.18"
toml = "=1.1.2"

[profile.release]
lto = "fat"
panic = "unwind"
strip = "symbols"
codegen-units = 1

[lints]
rust.warnings = { level = "deny" }
clippy.perf = { level = "deny", priority = -1 }
clippy.style = { level = "warn", priority = -1 }
clippy.pedantic = { level = "warn", priority = -1 }

clippy.too_many_lines = "allow"
clippy.manual_let_else = "allow"
clippy.cast_possible_truncation = "allow"
